// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Switch > Snapshots > should apply 'critical' skin classes 1`] = `
<div>
  <label
    class="_switch_b5c6ea _switch--critical_b5c6ea _switch--md_b5c6ea"
  >
    <input
      class="_switch__input_b5c6ea"
      type="checkbox"
    />
    <span
      class="_switch__control_b5c6ea"
    >
      <span
        class="_switch__thumb_b5c6ea"
      />
    </span>
    <span
      class="_switch__text_b5c6ea"
    >
      Switch
    </span>
  </label>
</div>
`;

exports[`Switch > Snapshots > should apply 'lg' size classes 1`] = `
<div>
  <label
    class="_switch_b5c6ea _switch--primary_b5c6ea _switch--lg_b5c6ea"
  >
    <input
      class="_switch__input_b5c6ea"
      type="checkbox"
    />
    <span
      class="_switch__control_b5c6ea"
    >
      <span
        class="_switch__thumb_b5c6ea"
      />
    </span>
    <span
      class="_switch__text_b5c6ea"
    >
      Switch
    </span>
  </label>
</div>
`;

exports[`Switch > Snapshots > should apply 'md' size classes 1`] = `
<div>
  <label
    class="_switch_b5c6ea _switch--primary_b5c6ea _switch--md_b5c6ea"
  >
    <input
      class="_switch__input_b5c6ea"
      type="checkbox"
    />
    <span
      class="_switch__control_b5c6ea"
    >
      <span
        class="_switch__thumb_b5c6ea"
      />
    </span>
    <span
      class="_switch__text_b5c6ea"
    >
      Switch
    </span>
  </label>
</div>
`;

exports[`Switch > Snapshots > should apply 'primary' skin classes 1`] = `
<div>
  <label
    class="_switch_b5c6ea _switch--primary_b5c6ea _switch--md_b5c6ea"
  >
    <input
      class="_switch__input_b5c6ea"
      type="checkbox"
    />
    <span
      class="_switch__control_b5c6ea"
    >
      <span
        class="_switch__thumb_b5c6ea"
      />
    </span>
    <span
      class="_switch__text_b5c6ea"
    >
      Switch
    </span>
  </label>
</div>
`;

exports[`Switch > Snapshots > should apply 'sm' size classes 1`] = `
<div>
  <label
    class="_switch_b5c6ea _switch--primary_b5c6ea _switch--sm_b5c6ea"
  >
    <input
      class="_switch__input_b5c6ea"
      type="checkbox"
    />
    <span
      class="_switch__control_b5c6ea"
    >
      <span
        class="_switch__thumb_b5c6ea"
      />
    </span>
    <span
      class="_switch__text_b5c6ea"
    >
      Switch
    </span>
  </label>
</div>
`;

exports[`Switch > Snapshots > should apply 'success' skin classes 1`] = `
<div>
  <label
    class="_switch_b5c6ea _switch--success_b5c6ea _switch--md_b5c6ea"
  >
    <input
      class="_switch__input_b5c6ea"
      type="checkbox"
    />
    <span
      class="_switch__control_b5c6ea"
    >
      <span
        class="_switch__thumb_b5c6ea"
      />
    </span>
    <span
      class="_switch__text_b5c6ea"
    >
      Switch
    </span>
  </label>
</div>
`;

exports[`Switch > Snapshots > should render additional classes 1`] = `
<div>
  <label
    class="_switch_b5c6ea _switch--primary_b5c6ea _switch--md_b5c6ea other-class"
  >
    <input
      class="_switch__input_b5c6ea"
      type="checkbox"
    />
    <span
      class="_switch__control_b5c6ea"
    >
      <span
        class="_switch__thumb_b5c6ea"
      />
    </span>
    <span
      class="_switch__text_b5c6ea"
    >
      Switch
    </span>
  </label>
</div>
`;

exports[`Switch > Snapshots > should render loading 1`] = `
<div>
  <label
    class="_switch_b5c6ea _switch--primary_b5c6ea _switch--md_b5c6ea _switch--loading_b5c6ea"
  >
    <input
      class="_switch__input_b5c6ea"
      type="checkbox"
    />
    <span
      class="_switch__control_b5c6ea"
    >
      <span
        class="_switch__thumb_b5c6ea"
      >
        <div
          class="_spinner_c80566 _spinner--default_c80566 _spinner--xs_c80566 _switch__spinner_b5c6ea"
        >
          <svg
            class="_spinner__svg_c80566"
            fill="currentColor"
            height="20"
            viewBox="0 0 48 48"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="24"
              cy="4"
              r="4"
            />
            <circle
              cx="12.19"
              cy="7.86"
              r="3.7"
            />
            <circle
              cx="5.02"
              cy="17.68"
              r="3.4"
            />
            <circle
              cx="5.02"
              cy="30.32"
              r="3.1"
            />
            <circle
              cx="12.19"
              cy="40.14"
              r="2.8"
            />
            <circle
              cx="24"
              cy="44"
              r="2.5"
            />
            <circle
              cx="35.81"
              cy="40.14"
              r="2.2"
            />
            <circle
              cx="42.98"
              cy="30.32"
              r="1.9"
            />
            <circle
              cx="42.98"
              cy="17.68"
              r="1.6"
            />
            <circle
              cx="35.81"
              cy="7.86"
              r="1.3"
            />
          </svg>
        </div>
      </span>
    </span>
    <span
      class="_switch__text_b5c6ea"
    >
      Switch
    </span>
  </label>
</div>
`;

exports[`Switch > Snapshots > should renders default component 1`] = `
<div>
  <label
    class="_switch_b5c6ea _switch--primary_b5c6ea _switch--md_b5c6ea"
  >
    <input
      class="_switch__input_b5c6ea"
      type="checkbox"
    />
    <span
      class="_switch__control_b5c6ea"
    >
      <span
        class="_switch__thumb_b5c6ea"
      />
    </span>
    <span
      class="_switch__text_b5c6ea"
    >
      Switch
    </span>
  </label>
</div>
`;
